syntax = "proto3";

option csharp_namespace = "GameServer";

package catridge;

// The greeting service definition.
service Catridge {
	// Sends a greeting
	rpc GetCartage (CatridgeRequest) returns (CatridgeReply);
}

// The request message containing the user's name.
message CatridgeRequest {
	string Id = 1;
}

// The response message containing the greetings.
message CatridgeReply {
	string message = 1;
}