syntax = "proto3";

option csharp_namespace = "GrpcGreeterClient";

package GameServerGRPC;

// The greeting service definition.
service GameServerGRPC {
	// Sends a greeting
	rpc CreateNewGame (GameCatridgeRequest) returns (GameCatridgeReply);
	rpc JoinGame (GameRequest) returns (JoinResponce);
	rpc GetGameStateOfPlayer(GameRequest) returns (GameResponce);
	rpc SendCommand(GameRequest) returns (GameResponce);
}

// The request message containing the user's name.

message GameCatridgeRequest {
	string Id = 1;
}
// The response message containing the greetings.
message GameCatridgeReply {
	string message = 1;
}

message GameRequest {
	string gameId = 1;
	string playerName = 2;
	string action = 3;
}

message JoinResponce {
	string message = 1;
}

message GameResponce{
	string message = 1;
}